add home content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Zadanie 2</title>
+	<title>Cahee - onepage website</title>
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700,900&amp;subset=latin-ext" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Pacifico&amp;subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
@@ -14,11 +14,10 @@
 </head>
 
 <body>
-
 	<nav class="nav-fixed">
-		<div class="nav-fixed__flex">
+		<div class="nav-fixed__flex cointainer">
 		<span class="nav-fixed__logo">Cahee</span>
-		<ul>
+		<ul class="nav-fixed__ul">
 			<li class="nav-fixed__li"><a class="nav-fixed__a" href="#home">home</a></li>
 			<li class="nav-fixed__li"><a class="nav-fixed__a" href="#about">about</a></li>
 			<li class="nav-fixed__li"><a class="nav-fixed__a" href="#services">services</a></li>
@@ -30,16 +29,15 @@
 		</div>
 	</nav>
 
-	<section id="home" class="site-part site-part--home">
-
-		<div class="site-part__grid">
-
-			
+	<section id="home" class="site-part home">
+		<div class="cointainer home__cointainer">
+			<h1 class="home__h1">Fresh Life</h1>
+			<p class="home__p">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+			<button class="home__button">GET FREE NOW</button>
 		</div>
-		<div class="site-part__grid">
 
 
-		</div>
+
 	</section>
 	<section id="about" class="site-part site-part--turkus">
 		<div class="site-part__grid">
