--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 	<nav class="nav-fixed">
-		<div class="nav-fixed__flex cointainer">
+		<div class="nav-fixed__flex container">
 		<span class="nav-fixed__logo">Cahee</span>
 		<ul class="nav-fixed__ul">
 			<li class="nav-fixed__li"><a class="nav-fixed__a" href="#home">home</a></li>
@@ -29,31 +29,25 @@
 		</div>
 	</nav>
 
-	<section id="home" class="site-part home">
-		<div class="cointainer home__cointainer">
+	<section id="home" class="home">
+		<div class="home__container">
 			<h1 class="home__h1">Fresh Life</h1>
 			<p class="home__p">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 			<button class="home__button">GET FREE NOW</button>
 		</div>
-
-
-
 	</section>
-	<section id="about" class="site-part site-part--turkus">
-		<div class="site-part__grid">
-			<div class="site-part__block-center">
-				
-			</div>
 
-			<div class="site-part__block-center">
-				<h2 class="container__h2">About Us</h2>
-				<div class="about-us__text">
-					<p class="about-us__p">Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-					<p class="about-us__p">Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
-				</div>
+	<section id="about" class="about-us">
+		<div class="about-us__container">			
+				<img class="about-us__img" src="img/plate-of-berriers.png" alt="" srcset="">
+			<div class="about-us__text">
+				<h2 class="about-us__h2">About Us</h2>
+				<p class="about-us__p">Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+				<p class="about-us__p">Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
 			</div>
 		</div>
 	</section>
+
 	<section id="services" class="site-part site-part--blue">
 		<div class="site-part__grid">
 			<div class="site-part__block-center">
