add new section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Cahee - onepage website</title>
+	<link rel="shortcut icon" href="favicon.ico"/>
 	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,700,800,900&amp;subset=latin-ext" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Pacifico&amp;subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
@@ -129,31 +130,63 @@
 						<span class="blog__day">20</span>
 						<span class="blog__month">NOV</span>
 					</div>
+					<div class="blog__gradient">
+						<div class="blog__h4">Green Smoothies: Too Much of a Good Thing?
+						</div>
+						<div class="blog__author">By Auskteez - 2 hours ago
+						</div>
+					</div>
 				</div>
-				<div class="blog__image blog__image-2"></div>
-				<div class="blog__image blog__image-3"></div>
+				<div class="blog__image blog__image-2">
+					<div class="blog__date">
+						<span class="blog__day">14</span>
+						<span class="blog__month">NOV</span>
+					</div>
+					<div class="blog__gradient">
+						<div class="blog__h4">Growing Food and a “Thirst” for Innovation
+
+						</div>
+						<div class="blog__author">By Auskteez - 3 hours ago
+						</div>
+					</div>
+				</div>
+				<div class="blog__image blog__image-3">
+					<div class="blog__date">
+						<span class="blog__day">10</span>
+						<span class="blog__month">NOV</span>
+					</div>
+					<div class="blog__gradient">
+						<div class="blog__h4">Pesticides & Food: What You Need to Know
+
+						</div>
+						<div class="blog__author">By Auskteez - 6 hours ago
+						</div>
+					</div>
+				</div>
 			</div>
 			<button class="blog__button">VIEW MORE</button>
 		</div>
 	</section>
-	<!-- 
-	<section id="contact" class="site-part">
-		<h2>Contact</h2>
-		<div class="">
-			<p>For new projects, ideas, business or anything you'd like to discuss, contact with me!</p>
-		</div>
-		<div class="">
-			<form action="">
+	
+	<section id="contact" class="contact">
+		<h2 class="contact__h2">Contact</h2>
+		<p class="contact__p">For new projects, ideas, business or anything you'd like to discuss, contact with me!</p>
+
+		<div class="contact__flex">
+			<form class="contact__form" action="">
 			</form>
+			<div class="contact__address">
+			</div>
 		</div>
-		<div class="">
-		</div>
+		
 	</section>
-	<div id="footer" class="site-part">
+	
+	<!-- 
+	<footer id="footer" class="footer">
 		<span></span>
 		<img src="" alt="">
 		<a href=""></a>
-	</div> -->
+	</footer> -->
 	<script>
 		$(window).scroll(function() {
 			var top = $(window).scrollTop();
