add correct blog__image links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/media.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 
 <body>
@@ -131,8 +130,8 @@
 						<span class="blog__month">NOV</span>
 					</div>
 					<div class="blog__gradient">
-						<div class="blog__h4">Green Smoothies: Too Much of a Good Thing?
-						</div>
+						<a class="blog__a" href="">Green Smoothies: Too Much of a Good Thing?
+						</a>
 						<div class="blog__author">By Auskteez - 2 hours ago
 						</div>
 					</div>
@@ -143,9 +142,9 @@
 						<span class="blog__month">NOV</span>
 					</div>
 					<div class="blog__gradient">
-						<div class="blog__h4">Growing Food and a “Thirst” for Innovation
+						<a class="blog__a" href="">Growing Food and a “Thirst” for Innovation
 
-						</div>
+						</a>
 						<div class="blog__author">By Auskteez - 3 hours ago
 						</div>
 					</div>
@@ -156,9 +155,9 @@
 						<span class="blog__month">NOV</span>
 					</div>
 					<div class="blog__gradient">
-						<div class="blog__h4">Pesticides & Food: What You Need to Know
+						<a class="blog__a" href="">Pesticides & Food: What You Need to Know
 
-						</div>
+						</a>
 						<div class="blog__author">By Auskteez - 6 hours ago
 						</div>
 					</div>
@@ -187,19 +186,7 @@
 		<img src="" alt="">
 		<a href=""></a>
 	</footer> -->
-	<script>
-		$(window).scroll(function() {
-			var top = $(window).scrollTop();
-			if (top > 200) {
-				$('.nav-fixed').addClass('nav-fixed--smaller');
-				$('#scroll').hide();
-			} else {
-				$('.nav-fixed').removeClass('nav-fixed--smaller');
-				$('#scroll').show();
-			}
-		});
 
-	</script>
 </body>
 
 </html>
