--- a/index.html
+++ b/index.html
@@ -201,15 +201,17 @@
 
 	</section>
 	
-<!-------------------------------------------
-	<footer id="footer" class="footer">
-		<span></span>
-		<img src="" alt="">
-		<a href=""></a>
-	</footer>
--------------------------------------------->
 
-		<script>
+	<footer id="footer" class="footer">
+		<div class="footer__container">
+			<span class="footer__code">coded by <a href="https://github.com/tomaszbujnicki">Tom</a> 2020</span>
+			<span class="footer__small-logo">Cahee</span>
+			<span class="footer__design">Designed with <span class="footer__love">love</span> by <a href="https://unsplash.com/@auskteez/portfolio">Auskteez</a></span>
+		</div>
+	</footer>
+
+
+	<script>
 		$(window).scroll(function() {
 			var top = $(window).scrollTop();
 			if (top > 200) {
@@ -220,7 +222,6 @@
 				$('#scroll').show();
 			}
 		});
-
 	</script>
 
 </body>
