--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Cahee - onepage website</title>
-	<link rel="shortcut icon" href="favicon.ico"/>
-	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,700,800,900&amp;subset=latin-ext" rel="stylesheet">
+	<link rel="shortcut icon" href="favicon.ico" />
+	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,700,800,900&amp;subset=latin-ext"
+		rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Pacifico&amp;subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -17,15 +18,15 @@
 <body>
 	<nav class="nav-fixed">
 		<div class="nav-fixed__flex container">
-		<span class="nav-fixed__logo">Cahee</span>
-		<ul class="nav-fixed__ul">
-			<li class="nav-fixed__li"><a class="nav-fixed__a" href="#home">home</a></li>
-			<li class="nav-fixed__li"><a class="nav-fixed__a" href="#about">about</a></li>
-			<li class="nav-fixed__li"><a class="nav-fixed__a" href="#services">services</a></li>
-			<li class="nav-fixed__li"><a class="nav-fixed__a" href="#gallery">gallery</a></li>
-			<li class="nav-fixed__li"><a class="nav-fixed__a" href="#blog">blog</a></li>
-			<li class="nav-fixed__li"><a class="nav-fixed__a" href="#contact">contact</a></li>
-		</ul>
+			<span class="nav-fixed__logo">Cahee</span>
+			<ul class="nav-fixed__ul">
+				<li class="nav-fixed__li"><a class="nav-fixed__a" href="#home">home</a></li>
+				<li class="nav-fixed__li"><a class="nav-fixed__a" href="#about">about</a></li>
+				<li class="nav-fixed__li"><a class="nav-fixed__a" href="#services">services</a></li>
+				<li class="nav-fixed__li"><a class="nav-fixed__a" href="#gallery">gallery</a></li>
+				<li class="nav-fixed__li"><a class="nav-fixed__a" href="#blog">blog</a></li>
+				<li class="nav-fixed__li"><a class="nav-fixed__a" href="#contact">contact</a></li>
+			</ul>
 			<img id="scroll" src="img/scroll.png" alt="" class="scroll-fixed">
 		</div>
 	</nav>
@@ -33,57 +34,62 @@
 	<section id="home" class="home">
 		<div class="home__container">
 			<h1 class="home__h1">Fresh Life</h1>
-			<p class="home__p">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+			<p class="home__p">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+				veniam, quis nostrud exercitation ullamco.</p>
 			<button class="home__button">GET FREE NOW</button>
 		</div>
 	</section>
 
 	<section id="about" class="about-us">
-		<div class="about-us__container">			
-				<img class="about-us__img" src="img/plate-of-berriers3.png" alt="" srcset="">
+		<div class="about-us__container">
+			<img class="about-us__img" src="img/plate-of-berriers3.png" alt="" srcset="">
 			<div class="about-us__text">
 				<h2 class="about-us__h2">About Us</h2>
-				<p class="about-us__p">Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-				<p class="about-us__p">Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
+				<p class="about-us__p">Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+					ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+					voluptate velit esse cillum.</p>
+				<p class="about-us__p">Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit
+					voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.
+				</p>
 			</div>
 		</div>
 	</section>
 
 	<section id="services" class="services">
 		<div class="services__container">
-			
-				<div class="services__list">
-					<div class="services__item">
-						<div class="services__item-name">
-							<span>Online Shopping</span>
-						</div>
-						<div class="services__item-icon"><img src="img/icon-cart.png" alt=""></div>
+
+			<div class="services__list">
+				<div class="services__item">
+					<div class="services__item-name">
+						<span>Online Shopping</span>
 					</div>
-					<div class="services__item">
-						<div class="services__item-name">
-							<span>Quality Product</span>
-						</div>
-						<div class="services__item-icon"><img src="img/icon-quality.png" alt=""></div>
-					</div>
-					<div class="services__item">
-						<div class="services__item-name">
-							<span>Domestic 	&amp; International Delivery</span>
-						</div>
-						<div class="services__item-icon"><img src="img/icon-international.png" alt=""></div>
-					</div>
-					<div class="services__item">
-						<div class="services__item-name">
-							<span>Well Organized</span>
-						</div>
-						<div class="services__item-icon"><img src="img/icon-carrot.png" alt=""></div>
-					</div>
+					<div class="services__item-icon"><img src="img/icon-cart.png" alt=""></div>
 				</div>
-			
-			
-				<div class="services__img">
-					<h2 class="services__h2">Our Services</h2>
+				<div class="services__item">
+					<div class="services__item-name">
+						<span>Quality Product</span>
+					</div>
+					<div class="services__item-icon"><img src="img/icon-quality.png" alt=""></div>
 				</div>
-			
+				<div class="services__item">
+					<div class="services__item-name">
+						<span>Domestic &amp; International Delivery</span>
+					</div>
+					<div class="services__item-icon"><img src="img/icon-international.png" alt=""></div>
+				</div>
+				<div class="services__item">
+					<div class="services__item-name">
+						<span>Well Organized</span>
+					</div>
+					<div class="services__item-icon"><img src="img/icon-carrot.png" alt=""></div>
+				</div>
+			</div>
+
+
+			<div class="services__img">
+				<h2 class="services__h2">Our Services</h2>
+			</div>
+
 		</div>
 	</section>
 
@@ -92,7 +98,8 @@
 
 		<div class="gallery__container">
 			<h2 class="gallery__h2">Gallery</h2>
-			<p class="gallery__p">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+			<p class="gallery__p">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+				magna
 				aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat.</p>
 			<div class="gallery__images">
@@ -106,11 +113,12 @@
 			<button class="gallery__button">VIEW MORE</button>
 		</div>
 	</section>
-	
+
 	<section id="subscribe" class="subscribe">
 		<div class="subscribe__container">
 			<h2 class="subscribe__h2">Subscribe To Us</h2>
-			<p class="subscribe__p">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+			<p class="subscribe__p">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+				labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 			<form action="">
 				<input class="subscribe__text" type="text" name="email" placeholder="Your email address...">
 				<input class="subscribe__button" type="button" value="SUBSCRIBE">
@@ -118,11 +126,12 @@
 		</div>
 	</section>
 
-	
+
 	<section id="blog" class="blog">
 		<div class="blog__container">
 			<h2 class="blog__h2">Blog</h2>
-			<p class="blog__p">Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+			<p class="blog__p">Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+				nisi
 				ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
 			<div class="blog__images">
 				<div class="blog__image blog__image-1">
@@ -167,25 +176,30 @@
 			<button class="blog__button">VIEW MORE</button>
 		</div>
 	</section>
-	
+
 	<section id="contact" class="contact">
 		<div class="contact__container">
 			<h2 class="contact__h2">Contact</h2>
-			<p class="contact__p">For new projects, ideas, business or anything you'd like to discuss, contact with me!</p>
+			<p class="contact__p">For new projects, ideas, business or anything you'd like to discuss, contact with me!
+			</p>
 
 			<div class="contact__split">
 				<form action="" method="post">
 					<ul>
-					 <li>
-					    <input class="contact__input" type="text" id="name" name="name"  required placeholder="Your name...">
-					 </li>
-					 <li>
-					    <input class="contact__input" type="email" id="email" name="email"  required placeholder="Your email...">
-					 <li>
-						<input class="contact__input" type="tel" id="phone" name="phone" placeholder="Your phone number...">
 						<li>
-					   <textarea class="contact__input contact__input--textarea" id="message" name="message"  required placeholder="Your messge..."></textarea>
-					 </li>
+							<input class="contact__input" type="text" id="name" name="name" required
+								placeholder="Your name...">
+						</li>
+						<li>
+							<input class="contact__input" type="email" id="email" name="email" required
+								placeholder="Your email...">
+						<li>
+							<input class="contact__input" type="tel" id="phone" name="phone"
+								placeholder="Your phone number...">
+						<li>
+							<textarea class="contact__input contact__input--textarea" id="message" name="message"
+								required placeholder="Your messge..."></textarea>
+						</li>
 					</ul>
 				</form>
 				<address class="contact__address">
@@ -200,19 +214,20 @@
 		</div>
 
 	</section>
-	
+
 
 	<footer id="footer" class="footer">
 		<div class="footer__container">
 			<span class="footer__code">coded by <a href="https://github.com/tomaszbujnicki">Tom</a> 2020</span>
 			<span class="footer__small-logo">Cahee</span>
-			<span class="footer__design">Designed with <span class="footer__love">love</span> by <a href="https://unsplash.com/@auskteez/portfolio">Auskteez</a></span>
+			<span class="footer__design">Designed with <span class="footer__love">love</span> by <a
+					href="https://unsplash.com/@auskteez/portfolio">Auskteez</a></span>
 		</div>
 	</footer>
 
 
 	<script>
-		$(window).scroll(function() {
+		$(window).scroll(function () {
 			var top = $(window).scrollTop();
 			if (top > 200) {
 				$('.nav-fixed').addClass('nav-fixed--smaller');
