--- a/index.html
+++ b/index.html
@@ -225,20 +225,7 @@
 		</div>
 	</footer>
 
-
-	<script>
-		$(window).scroll(function () {
-			var top = $(window).scrollTop();
-			if (top > 200) {
-				$('.nav-fixed').addClass('nav-fixed--smaller');
-				$('#scroll').hide();
-			} else {
-				$('.nav-fixed').removeClass('nav-fixed--smaller');
-				$('#scroll').show();
-			}
-		});
-	</script>
-
+	<script src="js/script.js"></script>
 </body>
 
 </html>
