@media contact section

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 			</p>
 
 			<div class="contact__split">
-				<form action="" method="post">
+				<form class="contact__form" action="" method="post">
 					<ul>
 						<li>
 							<input class="contact__input" type="text" id="name" name="name" required
