refactor code to BEM

--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
 		</div>
 	</section>
 
-	<section id="about" class="about-us">
-		<div class="about-us__container">
-			<img class="about-us__img" src="img/plate-of-berriers3.png" alt="" srcset="">
-			<div class="about-us__text">
-				<h2 class="about-us__h2">About Us</h2>
-				<p class="about-us__p">Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+	<section id="about" class="column section--cyan">
+		<div class="double container column__first column__last">
+			<img class="image" src="img/plate-of-berriers3.png" alt="">
+			<div class="column column--to-left column--to-center ">
+				<h2 class="title title--white column__margin-left">About Us</h2>
+				<p class="paragraph paragraph--white paragraph--left column__article column__margin-left">Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
 					ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
 					voluptate velit esse cillum.</p>
-				<p class="about-us__p">Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit
+				<p class="paragraph paragraph--white paragraph--left column__paragraph column__margin-left">Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit
 					voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.
 				</p>
 			</div>
 		</div>
 	</section>
 
-	<section id="services" class="services">
-		<div class="services__container">
+	<section id="services" class="column section--sky">
+		<div class="double container column__first column__last">
 
-			<div class="services__list">
+			<div class="column column--to-center column__margin-right">
 				<div class="services__item">
 					<div class="services__item-name">
 						<span>Online Shopping</span>
@@ -88,41 +88,41 @@
 			</div>
 
 
-			<div class="services__img">
-				<h2 class="services__h2">Our Services</h2>
+			<div class="column column--to-right column--to-center bg-image">
+				<h2 class="title title--white">Our Services</h2>
 			</div>
 
 		</div>
 	</section>
 
 
-	<section id="gallery" class="section section--yellow">
+	<section id="gallery" class="column section--yellow">
 
-		<div class="section__container">
-			<h2 class="title section__heading">Gallery</h2>
-			<p class="paragraph section__text">
+		<div class="column container">
+			<h2 class="title column__first">Gallery</h2>
+			<p class="paragraph column__article">
 				Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 				minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 			</p>
-			<div class="gallery section__item" id="lightgallery">
-				<a class="gallery__item gallery__img-1" href="img/1a.png">
+			<div class="gallery column__item" id="lightgallery">
+				<a class="gallery__item gallery__item-1" href="img/1a.png">
 					<img class="gallery__img" src="img/1a.png" alt="">
 				</a>
-				<a class="gallery__item gallery__img-2" href="img/2a.png">
+				<a class="gallery__item gallery__item-2" href="img/2a.png">
 					<img class="gallery__img" src="img/2a.png" alt="">
 				</a>
-				<a class="gallery__item gallery__img-3" href="img/3a.png">
+				<a class="gallery__item gallery__item-3" href="img/3a.png">
 					<img class="gallery__img" src="img/3a.png" alt="">
 				</a>
-				<a class="gallery__item gallery__img-4" href="img/4a.png">
+				<a class="gallery__item gallery__item-4" href="img/4a.png">
 					<img class="gallery__img" src="img/4a.png" alt="">
 				</a>
-				<a class="gallery__item gallery__img-5" href="img/5a.png">
+				<a class="gallery__item gallery__item-5" href="img/5a.png">
 					<img class="gallery__img" src="img/5a.png" alt="">
 				</a>
 			</div>
 
-			<button class="button section__item section__last">VIEW MORE</button>
+			<button class="button column__item column__last">VIEW MORE</button>
 		</div>
 	</section>
 
