--- a/index.html
+++ b/index.html
@@ -60,33 +60,32 @@
 	<section id="services" class="column section--sky">
 		<div class="double container column__first column__last">
 
-			<div class="column column--to-center column__margin-right">
-				<div class="services__item">
-					<div class="services__item-name">
-						<span>Online Shopping</span>
+			<div class="column column--to-center column__first column__margin-right">
+					<div class="services__item column__list-item">
+						<div class="services__item-name">
+							<span>Online Shopping</span>
+						</div>
+						<div class="services__item-icon"><img src="img/icon-cart.png" alt=""></div>
 					</div>
-					<div class="services__item-icon"><img src="img/icon-cart.png" alt=""></div>
-				</div>
-				<div class="services__item">
-					<div class="services__item-name">
-						<span>Quality Product</span>
+					<div class="services__item column__list-item">
+						<div class="services__item-name">
+							<span>Quality Product</span>
+						</div>
+						<div class="services__item-icon"><img src="img/icon-quality.png" alt=""></div>
 					</div>
-					<div class="services__item-icon"><img src="img/icon-quality.png" alt=""></div>
-				</div>
-				<div class="services__item">
-					<div class="services__item-name">
-						<span>Domestic &amp; International Delivery</span>
+					<div class="services__item column__list-item">
+						<div class="services__item-name">
+							<span>Domestic &amp; International Delivery</span>
+						</div>
+						<div class="services__item-icon"><img src="img/icon-international.png" alt=""></div>
 					</div>
-					<div class="services__item-icon"><img src="img/icon-international.png" alt=""></div>
-				</div>
-				<div class="services__item">
-					<div class="services__item-name">
-						<span>Well Organized</span>
+					<div class="services__item column__list-item">
+						<div class="services__item-name">
+							<span>Well Organized</span>
+						</div>
+						<div class="services__item-icon"><img src="img/icon-carrot.png" alt=""></div>
 					</div>
-					<div class="services__item-icon"><img src="img/icon-carrot.png" alt=""></div>
 				</div>
-			</div>
-
 
 			<div class="column column--to-right column--to-center bg-image">
 				<h2 class="title title--white">Our Services</h2>
