--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="css/bem.css">
 	<link rel="stylesheet" href="css/theme.css">
 	<link rel="stylesheet" href="css/wrapper.css">
+	<link rel="stylesheet" href="css/button.css">
 	<link rel="stylesheet" href="css/article.css">
 	<link rel="stylesheet" href="css/media.css">
 	<link type="text/css" rel="stylesheet" href="css/lightgallery.css" />
@@ -37,12 +38,12 @@
 	</header>
 
 	<section id="home" class="t-strawberry">
-		<div class="wrapper">
+		<div class="wrapper wrapper--full">
 			<article class="wrapper__group">
 				<h1 class="">Fresh Life</h1>
 				<p class="">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
 					veniam, quis nostrud exercitation ullamco.</p>
-				<button class="">GET FREE NOW</button>
+				<button class="button button--orange">GET FREE NOW</button>
 			</article>
 		</div>
 	</section>
